# casadi-models

./: .gitignore  README.md  casadi_models_readme_examples.ipynb  continuous_time_models.py  equations.ipynb  examples.ipynb  nonliner_model_example.ipynb  pyproject.toml  readme_examples.ipynb  readme_examples_nl.ipynb  step_responses.py
src/cas_models/: param_utils.py  sympy_conversion.py  transformations.py  validation.py
src/cas_models/continuous_time/: models.py  regulators.py  simulate.py
src/cas_models/continuous_time.py/: continuous_time_models.py
src/cas_models/discrete_time/: models.py  simulate.py
surge_tanks/: surge_tanks.py
tests/: conftest.py  gen_tf2ss_tests.m  generate_test_data.m  generate_test_data.py  generate_test_data_arx.m  print_ss.m  test_arx_octave_comparison.py  test_continuous_time_models.py  test_discrete_time_models.py  test_examples.py  test_param_utils.py  test_simulate.py  test_static_nonlinearity.py  test_sympy_bug.py  test_sympy_conversion.py  test_tank_mixer_network.py  test_tf2ss_conversion.py  test_transformations.py  test_validation.py
tests/data/: TP04_Q1a.csv  TP04_Q1a.mat  TP04_Q1a_ss.csv  generate_test_data_arx_out.txt  results_ct.csv  results_tf2ss.csv
