[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casadi-models"
version = "0.1.0"
description = "CasADi models for continuous-time dynamical systems"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Bill Tubbs", email = "bill.tubbs@me.com"}
]
dependencies = [
    "casadi==3.7.2",
    "numpy==2.3.4",
    "scipy==1.16.3",
    "matplotlib==3.10.7",
    "pandas==2.3.3",
    "PyYAML==6.0.3",
    "sympy==1.14.0",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "ipykernel==7.1.0",
    "ipython==9.6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"